--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
     "node-sass": "^4.12.0",
+    "prisma-client-lib": "^1.34.10",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-scrollable-anchor": "^0.6.1"
+    "react-scrollable-anchor": "^0.6.1",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
